--- a/flipped-style/01-basics-of-doe/011-activity-turkey-in-pens.qmd
+++ b/flipped-style/01-basics-of-doe/011-activity-turkey-in-pens.qmd
@@ -15,16 +15,16 @@ You may use either for this class, but I recommend having JMP installed/download
 
 We are interested in examining the effect of dietary protein on growth in Standard Bronze farm-raised turkeys. There are 24 turkeys available for the study.
 
-The turkeys are housed **3 to a pen**, and each pen has a single feed trough, meaning all turkeys within a pen receive the same diet.
+The turkeys are housed 3 to a pen, and each pen has a single feed trough, meaning all turkeys within a pen receive the same diet.
 
 Two diets are studied:
 
-- **Low-protein diet:** 15% protein  
-- **High-protein diet:** 30% protein  
+- Low-protein diet: 15% protein  
+- High-protein diet: 30% protein  
 
-Diets are assigned **at random to pens**, with **4 pens receiving each diet** (8 pens total).
+Diets are assigned at random to pens, with 4 pens receiving each diet (8 pens total).
 
-The turkeys are fed their assigned diet for 6 weeks. The primary outcome measured on **each turkey** is **average daily weight gain (ADG), in lbs/day**.
+The turkeys are fed their assigned diet for 6 weeks. The primary outcome measured on each turkey is average daily weight gain (ADG), in lbs/day.
 
 ## 1. Sketch a blueprint for this study.
 
@@ -44,13 +44,13 @@ The turkeys are fed their assigned diet for 6 weeks. The primary outcome measure
 
 a. Open the file `turkey_pen_data.csv`.
 
-b. What does **each row** in this data file represent?
+b. What does each row in this data file represent?
 
 c. How many observations are there per diet? Why?
 
-d. Create a plot of **pen-level ADG** on the y-axis and **Diet** on the x-axis (Hint: each diet should have 4 dots).
+d. Create a plot of pen-level ADG on the y-axis and Diet on the x-axis (Hint: each diet should have 4 dots).
 
-e. Create a summary table showing the **mean** and **standard deviation** of pen-level ADG for each diet.
+e. Create a summary table showing the mean and standard deviation of pen-level ADG for each diet.
 
 | Diet | Mean pen ADG | SD pen ADG |
 |------|--------------|------------|
@@ -61,13 +61,13 @@ e. Create a summary table showing the **mean** and **standard deviation** of pen
 
 f. Open the file `turkey_animal_data.csv`.
 
-g. What does **each row** in this data file represent? How many rows are there? Why?
+g. What does each row in this data file represent? How many rows are there? Why?
 
-h. Create a plot of **animal-level ADG** on the y-axis and **Diet** on the x-axis.
+h. Create a plot of animal-level ADG on the y-axis and Diet on the x-axis.
 
-i. How many **measurement units** are there per diet in this plot?
+i. How many measurement/sampling units are there per diet in this plot?
 
-j. Create a summary table showing the **mean** and **standard deviation** of ADG for each diet.
+j. Create a summary table showing the mean and standard deviation of ADG for each diet.
 
 | Diet | Mean ADG | SD ADG |
 |------|----------|--------|
@@ -78,7 +78,7 @@ k. Compare the animal-level means and standard deviations to the pen-level resul
 
 ## 5. Comparing Analyses
 
-Now consider a two-sample t-test comparing the **low-protein** and **high-protein** diets.
+Now consider a two-sample t-test comparing the low-protein and high-protein diets.
 
 ### Pen-level analysis
 
@@ -102,7 +102,7 @@ Report:
 
 ## 6. Interpretation
 
-n. Which analysis is **correct** for answering the research question? Explain.
+n. Which analysis is *correct* for answering the research question? Explain.
 
 Your explanation should address:
 
@@ -116,7 +116,7 @@ When you are finished, submit your work to **Gradescope**:
 
 1. Make sure your submission includes:
 
-   - Your **study blueprint sketch**
+   - Your study blueprint sketch
    - Your written answers for parts (b)–(n)
    - Any requested tables/values from JMP or R
    
