--- a/00-course-info/W2026/stat323-syllabus-W2026.qmd
+++ b/00-course-info/W2026/stat323-syllabus-W2026.qmd
@@ -44,13 +44,13 @@ question!
 
 **Office Hours** are held in my office (25-103) during the following times:
 
-<!-- ::: column-margin -->
+::: column-margin
 
-<!-- {{< video https://www.youtube.com/embed/yQq1-_ujXrM?si=sFpcpfT9Cey2-Eaf >}} -->
+{{< video https://www.youtube.com/embed/yQq1-_ujXrM?si=sFpcpfT9Cey2-Eaf >}}
 
-<!-- Introducing Faculty Office Hours -->
+Introducing Faculty Office Hours
 
-<!-- ::: -->
+:::
 
 | Day       | Time                   |
 |-----------|------------------------|
@@ -140,7 +140,7 @@ class_cal <- Cal |>
                              "Finals"="white",
                              "Cal Poly Holiday" = "grey10",
                              "NA" = "white", # I like these whited out...
-                             "Quiz"="#BD8B13"),
+                             "Exam"="#BD8B13"),
                     #... but also suppress a label for a non-class semester day
                     breaks=c("Finals", "Cal Poly Holiday", "Class Day","Exam"))
 # class_cal
@@ -330,14 +330,14 @@ tribble(
 
 Lower bounds for grade cutoffs are shown in the following table. I will not "round up" grades at the end of the quarter. See this [thread](https://twitter.com/drseanmullen/status/1604212304622518272?s=46&t=II3oNLTSSrljVPqptoe21g) for advice on *"Playing the lines. Don't be there."*
 
-<!-- ::: column-margin -->
+::: column-margin
 
-<!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"> -->
-<!-- </script> -->
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+</script>
 
-<!-- <blockquote class="twitter-tweet"><p lang="en" dir="ltr">When my 11yo daughter complains her opponent in tennis is calling calls out..<br><br>I tell her:<br><br>“Don’t play the lines.”<br><br>As a college student, eventually every professor has to draw some lines.<br><br>Don’t play them so close. Don’t be there.</p>&mdash; Dr. Sean Mullen (@drseanmullen) <a href="https://twitter.com/drseanmullen/status/1604212307260645376?ref_src=twsrc%5Etfw">December 17, 2022</a></blockquote> -->
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">When my 11yo daughter complains her opponent in tennis is calling calls out..<br><br>I tell her:<br><br>“Don’t play the lines.”<br><br>As a college student, eventually every professor has to draw some lines.<br><br>Don’t play them so close. Don’t be there.</p>&mdash; Dr. Sean Mullen (@drseanmullen) <a href="https://twitter.com/drseanmullen/status/1604212307260645376?ref_src=twsrc%5Etfw">December 17, 2022</a></blockquote>
 
-<!-- ::: -->
+:::
 
 | Letter grade | X +  | X   | X - |
 |--------------|------|-----|-----|
@@ -427,6 +427,8 @@ There will be two midterm exams and a final exam, designed to assess your indivi
 We are living through a challenging time with unique, unusual circumstances. I do not want class deadlines to cause you extreme stress or anxiety. I offer **3 "grace days"** -- 24 hours to turn in the assignment late without a penalty. These can be used on the in-class activities and lab assignments (a single group member must be willing to use one of their grace days for the entire group), but not participation, exams, or final project presentations. These "grace days" can be stacked and used all at once on a single assignment or spread out and used on separate assignments throughout the quarter. Simply send me an email to let me know you how many "grace days" you want to use on the assignment.
 
 After using up your "grace days", late work will be accepted with a 20% grade penalty for each day late (including weekends).
+
+\newpage
 
 ::: callout-warning
 ### Automatic Canvas Settings
