--- a/flipped-style/02-crd/023-slides-statistical-modeling-crd.qmd
+++ b/flipped-style/02-crd/023-slides-statistical-modeling-crd.qmd
@@ -79,7 +79,7 @@ knitr::include_graphics("images/021-blueprint-shoe-type.png")
 
 ## Cell Means Model
 
-$$y_{ij} = \mu + \varepsilon_{ij} \text{ with } \varepsilon_{ij} \text{ iid } \sim N(0, \sigma^2)$$
+$$y_{ij} = \mu_i + \varepsilon_{ij} \text{ with } \varepsilon_{ij} \text{ iid } \sim N(0, \sigma^2)$$
 for 	$i = 1, 2, 3$ and $j = 1, 2$
 
 Where:
@@ -179,7 +179,7 @@ Then:
 :::
 ::: {.column width=40%}
 ```{r}
-#| out-width: 100%
+#| out-width: 80%
 knitr::include_graphics("images/023-shoe-type-sum-to-zero.png")
 ```
 :::
@@ -206,7 +206,7 @@ Then:
 :::
 ::: {.column width=40%}
 ```{r}
-#| out-width: 100%
+#| out-width: 80%
 knitr::include_graphics("images/023-shoe-type-set-to-zero.png")
 ```
 :::
