--- a/flipped-style/02-crd/024-slides-Inference-for-Means.qmd
+++ b/flipped-style/02-crd/024-slides-Inference-for-Means.qmd
@@ -174,6 +174,7 @@ shoe_lsmeans
 #| message: false
 #| fig-width: 6
 #| fig-height: 6
+#| out-width: 75%
 emmip(shoe_mod, ~ Shoe, CIs = T) +
   labs(y = "Estimated Lap Time (seconds)")
 ```
